--- a/app/src/main/res/layout/activity_profile_show.xml
+++ b/app/src/main/res/layout/activity_profile_show.xml
@@ -23,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_20sdp"
+        android:backgroundTint="@color/blue"
         android:elevation="@dimen/_10sdp"
         app:cardCornerRadius="@dimen/_10sdp"
         app:cardUseCompatPadding="true"
@@ -42,7 +43,7 @@
                 android:layout_margin="@dimen/_5sdp"
                 android:layout_weight="0.7"
                 android:src="@drawable/baseline_person_24"
-                app:civ_border_color="@color/darkBlue"
+                app:civ_border_color="@color/white"
                 app:civ_border_width="2dp" />
 
             <LinearLayout
@@ -56,30 +57,31 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1">
+
                     <TextView
                         android:id="@+id/txtName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/_30sdp"
                         android:ellipsize="marquee"
                         android:focusable="true"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
                         android:focusableInTouchMode="true"
                         android:hint="Aziz Kachwala"
                         android:marqueeRepeatLimit="marquee_forever"
                         android:singleLine="true"
-                        android:textColor="@color/black"
-                        android:layout_marginEnd="@dimen/_30sdp"
+                        android:textColor="@color/white"
                         android:textSize="@dimen/_20ssp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
                         android:layout_width="@dimen/_25sdp"
                         android:layout_height="@dimen/_25sdp"
+                        android:layout_marginEnd="@dimen/_5sdp"
                         android:src="@drawable/baseline_edit_24"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:layout_marginEnd="@dimen/_5sdp"/>
+                        app:layout_constraintTop_toTopOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -94,7 +96,7 @@
                     android:hint="azizKachwala123456789@gmail.com"
                     android:marqueeRepeatLimit="marquee_forever"
                     android:singleLine="true"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/_15ssp"
                     android:textStyle="bold" />
 
@@ -110,7 +112,7 @@
                     android:hint="9988776655"
                     android:marqueeRepeatLimit="marquee_forever"
                     android:singleLine="true"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/_15ssp"
                     android:textStyle="bold" />
 
@@ -125,6 +127,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10sdp"
+        android:backgroundTint="@color/blue"
         android:elevation="@dimen/_10sdp"
         app:cardCornerRadius="@dimen/_10sdp"
         app:cardUseCompatPadding="true"
@@ -134,14 +137,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="@dimen/_8sdp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingVertical="@dimen/_8sdp">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:text="App Name"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_22ssp" />
 
             <TextView
@@ -150,6 +154,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:hint="MeetEase"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_18ssp" />
 
         </LinearLayout>
@@ -161,6 +166,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10sdp"
+        android:backgroundTint="@color/blue"
         android:elevation="@dimen/_10sdp"
         app:cardCornerRadius="@dimen/_10sdp"
         app:cardUseCompatPadding="true"
@@ -170,14 +176,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="@dimen/_8sdp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingVertical="@dimen/_8sdp">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:text="App Version"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_22ssp" />
 
             <TextView
@@ -185,7 +192,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_10sdp"
-                android:text="v1.1"
+                android:hint="v1.1"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_18ssp" />
 
         </LinearLayout>
