--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightBlue"
+    android:background="@drawable/background"
     tools:context=".activity.homeScreen.settings.security.ForgotPasswordActivity">
 
     <ImageView
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:text="Forgot Password"
         android:textSize="@dimen/_30sdp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivBack" />
@@ -43,7 +44,7 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
-            android:background="@color/lightBlue"
+            android:background="@color/blue"
             android:orientation="horizontal"
             android:padding="0dp"
             android:paddingHorizontal="0dp"
