--- a/app/src/main/res/layout/activity_profile_show.xml
+++ b/app/src/main/res/layout/activity_profile_show.xml
@@ -61,7 +61,7 @@
                     <TextView
                         android:id="@+id/txtName"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_marginEnd="@dimen/_30sdp"
                         android:ellipsize="marquee"
                         android:focusable="true"
@@ -76,14 +76,14 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
-                        android:layout_width="@dimen/_25sdp"
-                        android:layout_height="@dimen/_25sdp"
+                        android:layout_width="@dimen/_35sdp"
+                        android:layout_height="match_parent"
                         android:layout_marginEnd="@dimen/_5sdp"
                         android:src="@drawable/baseline_edit_24"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
 
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
                     android:id="@+id/txtEmail"
@@ -126,7 +126,6 @@
         android:id="@+id/CvUserDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
         android:backgroundTint="@color/blue"
         android:elevation="@dimen/_10sdp"
         app:cardCornerRadius="@dimen/_10sdp"
@@ -165,7 +164,6 @@
         android:id="@+id/cvAppDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
         android:backgroundTint="@color/blue"
         android:elevation="@dimen/_10sdp"
         app:cardCornerRadius="@dimen/_10sdp"
