--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@color/lightBlue"
     tools:context=".activity.homeScreen.mainScreen.ContactUsActivity">
 
     <ImageView
@@ -119,8 +119,8 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:text="Send"
-                android:textColor="@color/black"
-                app:backgroundTint="@color/lightBlue" />
+                android:textColor="@color/white"
+                app:backgroundTint="@color/darkBlue" />
 
         </LinearLayout>
 
