--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,7 +9,7 @@
 
     <style name="button">
         <item name="android:background">@drawable/button_shape</item>
-        <item name="backgroundTint">@color/blue</item>
+        <item name="backgroundTint">@color/darkBlue</item>
         <item name="android:paddingStart">@dimen/_10sdp</item>
         <item name="android:paddingEnd">@dimen/_10sdp</item>
         <item name="android:paddingBottom">@dimen/_10sdp</item>
